tests/snapshots/spec_gen_test__render_cmake_package.snap
---
source: tests/spec_gen_test.rs
assertion_line: 27
expression: rendered
---

%global debug_package %{nil}
Name:           myproject
Version:        2.1.0
Release:        1%{?dist}
Summary:        A cmake-based project
License:        Apache-2.0
URL:            https://github.com/example/myproject
Source0:       v2.1.0.tar.gz
Patch0:       fix-build.patch
BuildRequires:  cmake
BuildRequires:  gcc-c++


%description
myproject is a cmake-based project that does useful things.

%package        devel
Summary:        Development headers for myproject
BuildArch:      noarch
License:        Apache-2.0
URL:            https://github.com/example/myproject

%description    devel
Contains header files for developing applications that use myproject.

%package        doc
Summary:        Documentation for myproject
BuildArch:      noarch
License:        Apache-2.0
URL:            https://github.com/example/myproject

%description    doc
Contains man pages and API documentation for myproject.

%prep

%setup -q



%build

%cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF
%cmake_build


%install

%cmake_install



%files

%{_bindir}/myproject

%doc README.md

%doc doc/

%license LICENSE

%files          devel

%{_includedir}/myproject/

%files          doc

%{_mandir}/man1/myproject.1*

%doc doc/myproject.pdf

%changelog

* Wed Jul 15 2026 Jane Doe <jane@example.org>
- 2.1.0-1

- Update to version 2.1.0

- Fix build system issues

* Mon Jun  1 2026 Jane Doe <jane@example.org>
- 2.0.0-1

- Major rewrite of internal APIs
