tests/snapshots/spec_gen_test__render_percent_escaping.snap
---
source: tests/spec_gen_test.rs
expression: rendered
---

Name:           escape-test
Version:        1.0
Release:        1%{?dist}
Summary:        Tests percent escaping in descriptions
License:        MIT


%description
This package uses %%{_libdir} and %%{name} macros in its description.

%prep

%autosetup -p1



%build

%make_build


%install

%make_install



%files

%{_bindir}/escape-test

%changelog

* Wed Jul  1 2026 Test User <test@example.org> - 1.0-1

- Initial package with %%percent signs
