tests/snapshots/spec_gen_test__render_plain_no_subpackage.snap
---
source: tests/spec_gen_test.rs
assertion_line: 19
expression: rendered
---

%global debug_package %{nil}
Name:           hello-world
Version:        1.0
Release:        1%{?dist}
Summary:        A friendly greeting program
License:        MIT
Source0:       hello-world-1.0.tar.gz


%description
hello-world prints a friendly greeting to standard output.

%prep

%setup -q



%build

%make_build


%install

%make_install



%files

%{_bindir}/hello-world

%doc README.md

%license LICENSE

%changelog

* Mon Jun 29 2026 Jane Doe <jane@example.org>
- 1.0-1

- Initial package
